RESOLVED FIXED152797
REGRESSION(r191948): [GStreamer] 4 new timeouts on layout tests.
https://bugs.webkit.org/show_bug.cgi?id=152797
Summary REGRESSION(r191948): [GStreamer] 4 new timeouts on layout tests.
Carlos Alberto Lopez Perez
Reported 2016-01-06 12:23:29 PST
Revision r191948 <http://trac.webkit.org/changeset/191948> has caused 4 new timeouts: Regressions: Unexpected timeouts (4) media/video-controls-no-scripting.html [ Timeout ] media/video-source-error.html [ Timeout ] media/video-source-load.html [ Timeout ] media/video-source-moved.html [ Timeout ] I have tested to build r191947 and r191948, and I can confirm that this 4 tests started to time out with r191948. Note: media/video-controls-no-scripting.html was failing before because of bug 141835 (but it was not timing out).
Attachments
Patch (2.22 KB, patch)
2016-02-02 06:00 PST, Carlos Garcia Campos
darin: review+
Michael Catanzaro
Comment 1 2016-01-25 17:27:07 PST
Carlos, do you have time to look at this?
Carlos Garcia Campos
Comment 2 2016-01-25 23:11:21 PST
No, but I'll find it.
Carlos Garcia Campos
Comment 3 2016-02-02 06:00:34 PST
Created attachment 270485 [details] Patch This seems to be a problem in the very few cases that the gst bus sync handler is called form the main thread. We were avoiding scheduling to the main thread in that case, but for some reason the bus gets stalled or something. So always end the message to the main thread. This fixed the timeouts for me for media/video-source-load.html, media/video-source-moved.html and media/video-controls-no-scripting.html, the others timeout, but they also timeout for me reverting the patch.
Darin Adler
Comment 4 2016-02-02 16:52:54 PST
Comment on attachment 270485 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=270485&action=review > Source/WebCore/ChangeLog:9 > + sync hanlder was called in the main thread. It seems that typo: hanlder
Darin Adler
Comment 5 2016-02-02 16:53:24 PST
Comment on attachment 270485 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=270485&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:1906 > + GRefPtr<GstMessage> protectMessage(message); protectedMessage is a better name for this local variable, since it’s not just used to protect the message, but to send it across threads as well
Carlos Garcia Campos
Comment 6 2016-02-03 02:31:41 PST
Note You need to log in before you can comment on or make changes to this bug.