REGRESSION(r191948): [GStreamer] 4 new timeouts on layout tests. https://bugs.webkit.org/show_bug.cgi?id=152797

Reviewed by Darin Adler.

Source/WebCore:

Always schedule messages to the main thread, even when the bus
sync handlder was called in the main thread. It seems that
GStreamer expects things to happen in the next main loop
iteration.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

LayoutTests:

Update test expectations.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/171917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196060 268f45cc-cd09-0410-ab3c-d52691b4dbfc